# vscode-codex-relay-key-launcher

./: .gitignore  CodexRelayKeyLauncher.spec  README.md  Show-CodexRelayProfiles.ps1  Start-CodexRelayVSCode.ps1  launch_ui.py  pyproject.toml  启动界面.cmd
tests/: Start-CodexRelayVSCode.Tests.ps1  test_key_status.py
